--- a/BLAZAMGui/UI/Outputs/ApplicationNewsProvider.razor
+++ b/BLAZAMGui/UI/Outputs/ApplicationNewsProvider.razor
@@ -3,7 +3,11 @@
 @inherits AppComponentBase
 @if (readItems.Count > 0 || unreadItems.Count > 0)
 {
-    <MudMenu @ref=newsMenu Dense=true ListClass="py-0" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight">
+    <MudMenu @ref=newsMenu
+             Dense=true
+             ListClass="py-0"
+             AnchorOrigin="Origin.BottomRight"
+             TransformOrigin="Origin.TopRight">
         <ActivatorContent>
             @{
                 var icon = Icons.Material.Filled.Notifications;
@@ -15,7 +19,7 @@
                 color = Color.Warning;
             }
 
-            <MudTooltip Text=@("Blazam "+AppLocalization["News"])>
+            <MudTooltip Color=Color.Surface Text=@("Blazam "+AppLocalization["News"])>
                 <MudFab Size=Size.Small Color=@color Class="mx-2" StartIcon="@icon" />
             </MudTooltip>
 
@@ -23,10 +27,13 @@
 
         <ChildContent>
             <MudContainer Class="px-0" Style="width:300px;">
-              
+
                 @foreach (var item in unreadItems.OrderByDescending(x => x.UpdatedAt))
                 {
-                    <MudButton Variant="Variant.Filled" Style="border-radius:0px;" FullWidth=true OnClick="@((args)=>{ShowNews(item);})">
+                    <MudButton Variant="Variant.Filled"
+                               Style="border-radius:0px;"
+                               FullWidth=true
+                               OnClick="@((args)=>{ShowNews(item);newsMenu?.OpenMenu(new());})">
                         <MudStack Class="mud-width-full pt-1" AlignItems="AlignItems.Start">
                             <MudStack Row=true>
                                 <MudIcon Color=@Color.Warning Icon="@Icons.Material.Filled.Email" /> @item.Title
@@ -42,7 +49,7 @@
                 {
                     foreach (var item in readItems.OrderByDescending(x => x.UpdatedAt))
                     {
-                        <MudButton Variant="Variant.Filled" Style="border-radius:0px;" FullWidth=true OnClick="@((args)=>{ShowNews(item);})">
+                        <MudButton Variant="Variant.Filled" Style="border-radius:0px;" FullWidth=true OnClick="@((args)=>{ShowNews(item);newsMenu?.OpenMenu(new());})">
                             <MudStack Class="mud-width-full pt-1" AlignItems="AlignItems.Start">
                                 <MudStack Row=true>
                                     <MudBadge Overlap=true Color="@Color.Success" Icon="@Icons.Material.Filled.Check">
@@ -120,14 +127,15 @@
     }
     private async void MarkAllRead()
     {
-        foreach(var newsItem in unreadItems)
+        foreach (var newsItem in unreadItems)
         {
-            try{
+            try
+            {
                 CurrentUser.State.ReadNewsItems.Add(new ReadNewsItem { NewsItemId = newsItem.Id, NewsItemUpdatedAt = newsItem.UpdatedAt, User = CurrentUser.State.Preferences });
             }
             catch
             {
-                
+
             }
         }
         await CurrentUser.State.SaveUserSettings();
