--- a/BLAZAMGui/UI/Settings/SystemSettings.razor
+++ b/BLAZAMGui/UI/Settings/SystemSettings.razor
@@ -28,7 +28,7 @@
     <MudText Typo="Typo.h6">@AppLocalization["Data Collection Settings"]</MudText>
 
 
-  
+
 
     <SettingsField Label="@AppLocalization["Send logs to developer"]">
         <MudText>
@@ -61,7 +61,7 @@
     </SettingsField>
 
     <SettingsField Label=@AppLocalization["Logs"]>
-       
+
 
         <MudLink Href="/download/logs" Target="Target.Blank">
             <MudButton Variant=Variant.Outlined Color="Color.Primary">Download Logs</MudButton>
@@ -78,9 +78,10 @@
 
     <ProcessResourceUsage Process="@ApplicationInfo.RunningProcess" />
 
+    <MudDivider Class="my-6" />
+    <MudText Typo="Typo.h6">@AppLocalization["Jobs Monitor"]</MudText>
 
-
-   
+    <JobsMonitor />
 
 
     <SettingsField>
