--- a/BLAZAMGui/UI/Chat/OtherViewersButton.razor
+++ b/BLAZAMGui/UI/Chat/OtherViewersButton.razor
@@ -13,7 +13,7 @@
                 Start Chat
             </MudMenuItem>
         }
-        <MudList>
+        <MudList T="string">
             <MudListSubheader>Other Viewers:</MudListSubheader>
             @foreach (var user in OtherViewers)
             {
