--- a/BLAZAMGui/UI/Dashboard/CurrentUserDashboardWidgets.razor
+++ b/BLAZAMGui/UI/Dashboard/CurrentUserDashboardWidgets.razor
@@ -16,7 +16,7 @@
                 <FlexContainer Spacing="4" Class="mx-auto">
 
                     <MudCard Class="pa-0 mx-auto" Elevation="1">
-                        <MudList Clickable="true"
+                        <MudList T="MudDropZone<UserDashboardWidget>"
                                  Class="d-flex flex-column ma-0 mx-auto py-0">
                             <MudDropZone AllowReorder=true
                                          T="UserDashboardWidget"
@@ -26,7 +26,7 @@
                         </MudList>
                     </MudCard>
                     <MudCard Class="pa-0 mx-auto" Elevation="2">
-                        <MudList Clickable="true"
+                        <MudList T="MudDropZone<UserDashboardWidget>"
                                  Class="d-flex flex-column ma-0 mx-auto py-0">
                             <MudDropZone AllowReorder=true
                                          T="UserDashboardWidget"
