--- a/BLAZAMGui/UI/Inputs/DynamicMudInput.razor
+++ b/BLAZAMGui/UI/Inputs/DynamicMudInput.razor
@@ -38,7 +38,7 @@
     case "Boolean":
     <MudStack>
         <MudSwitch Color=@Color
-             
+                       T="bool"
             Label=@Label 
             @bind-Checked=@Value 
             Disabled=@Disabled />
