--- a/BLAZAMGui/UI/Inputs/UnsavedChangesPrompt.razor
+++ b/BLAZAMGui/UI/Inputs/UnsavedChangesPrompt.razor
@@ -21,7 +21,7 @@
 
         </MudStack>
 
-        <MudChip Color=Color.Info>
+        <MudChip T="string" Color=Color.Info>
             Unsaved Changes
         </MudChip>
         </MudStack>
