--- a/BLAZAMGui/UI/Outputs/StatusCheck.razor
+++ b/BLAZAMGui/UI/Outputs/StatusCheck.razor
@@ -8,7 +8,10 @@
 }
 else
 {
-    <MudChip Size=Size.Small Color=@Color Icon="@Icon">@Text</MudChip>
+    <MudChip T="string"
+        Size=Size.Small 
+        Color=@Color
+        Icon="@Icon">@Text</MudChip>
 
 }
 
