--- a/BLAZAMGui/UI/Chat/ChatRoomMessage.razor
+++ b/BLAZAMGui/UI/Chat/ChatRoomMessage.razor
@@ -25,9 +25,13 @@
 {
     <MudStack Class="w-100">
         <MudStack Row="true">
-            <MudChip Size=Size.Small Color="Color.Secondary">@Message.User.Username</MudChip>
+            <MudChip T=string
+                     Size=Size.Small
+                     Color="Color.Secondary">
+                @Message.User.Username
+            </MudChip>
             <MudText Class="align-middle">@Message.Message</MudText>
-           
+
         </MudStack>
         <MudTooltip Text="@localTimestamp.ToString()" ShowOnHover=@timestampeShortend>
 
@@ -41,11 +45,12 @@ else
         <MudStack Justify="Justify.FlexEnd" Row="true">
             <MudText Class="align-middle">@Message.Message</MudText>
 
-            <MudChip Size=Size.Small
-                 Color="Color.Tertiary">
+            <MudChip T=string
+                     Size=Size.Small
+                     Color="Color.Tertiary">
                 @Message.User.Username
             </MudChip>
-            
+
         </MudStack>
         <MudTooltip RootClass="align-end" Style="z-index:1500 !important;" Text="@localTimestamp.ToString()" ShowOnHover=@timestampeShortend>
 
