--- a/BLAZAMGui/UI/DirectoryEntryViewHeader.razor
+++ b/BLAZAMGui/UI/DirectoryEntryViewHeader.razor
@@ -150,7 +150,8 @@
                 @if ((accountEntry.Enabled && accountEntry.CanDisable) || (accountEntry.Disabled && accountEntry.CanEnable))
                 {
                     <MudMenuItem>
-                        <MudSwitch Color=Color.Success
+                        <MudSwitch T=bool
+                                   Color=Color.Success
                                    Label="Account Enabled"
                                    @bind-Checked=@(accountEntry.Enabled)
                                    Disabled=@((accountEntry.Disabled && !accountEntry.CanEnable)||(accountEntry.Enabled && !accountEntry.CanDisable)) />
