--- a/BLAZAMGui/UI/Outputs/ApplicationNewsProvider.razor
+++ b/BLAZAMGui/UI/Outputs/ApplicationNewsProvider.razor
@@ -33,7 +33,7 @@
                     <MudButton Variant="Variant.Filled"
                                Style="border-radius:0px;"
                                FullWidth=true
-                               OnClick="@((args)=>{ShowNews(item);newsMenu?.OpenMenu(new());})">
+                               OnClick="@((args)=>{ShowNews(item);newsMenu?.OpenMenuAsync(new());})">
                         <MudStack Class="mud-width-full pt-1" AlignItems="AlignItems.Start">
                             <MudStack Row=true>
                                 <MudIcon Color=@Color.Warning Icon="@Icons.Material.Filled.Email" /> @item.Title
@@ -49,7 +49,7 @@
                 {
                     foreach (var item in readItems.OrderByDescending(x => x.UpdatedAt))
                     {
-                        <MudButton Variant="Variant.Filled" Style="border-radius:0px;" FullWidth=true OnClick="@((args)=>{ShowNews(item);newsMenu?.OpenMenu(new());})">
+                        <MudButton Variant="Variant.Filled" Style="border-radius:0px;" FullWidth=true OnClick="@((args)=>{ShowNews(item);newsMenu?.OpenMenuAsync(new());})">
                             <MudStack Class="mud-width-full pt-1" AlignItems="AlignItems.Start">
                                 <MudStack Row=true>
                                     <MudBadge Overlap=true Color="@Color.Success" Icon="@Icons.Material.Filled.Check">
@@ -122,7 +122,7 @@
 
         if (firstRender && unreadItems.Count > 0)
         {
-            newsMenu?.OpenMenu(new());
+            newsMenu?.OpenMenuAsync(new());
         }
     }
     private async void MarkAllRead()
