--- a/BLAZAM/Pages/Groups/CreateGroup.razor
+++ b/BLAZAM/Pages/Groups/CreateGroup.razor
@@ -1,7 +1,6 @@
 ﻿@page "/groups/create"
 @inherits TabbedAppComponentBase
 @attribute [Authorize]
-@inject OUNotificationService OUNotificationService
 <AppPageTitle>Create Group</AppPageTitle>
 
 <Row>
@@ -54,7 +53,7 @@
         <MudTabPanel Disabled=@(newGroup==null || newGroupName.IsNullOrEmpty())>
             <ChildContent>
                 <MudText>
-                    <ConfirmNewGroup Group="@newGroup" Confirmed="GroupCreated" />
+                    <ConfirmNewGroup Group="@newGroup" />
                     
                 </MudText>
             </ChildContent>
@@ -120,11 +119,5 @@
         LoadingData = true;
 
         await InvokeAsync(StateHasChanged);
-    }
-    async Task GroupCreated(IADGroup ou)
-    {
-        await AuditLogger.Group.Created(ou);
-        _ = OUNotificationService.PostAsync(ou, NotificationType.Create);
-
     }
 }
