--- a/BLAZAM/Pages/OU/CreateOU.razor
+++ b/BLAZAM/Pages/OU/CreateOU.razor
@@ -1,7 +1,6 @@
 ﻿@page "/ou/create"
 @inherits TabbedAppComponentBase
 @attribute [Authorize]
-@inject OUNotificationService OUNotificationService
 
 <AppPageTitle>Create OU</AppPageTitle>
 
@@ -37,7 +36,7 @@
         <MudTabPanel Disabled=@(newOU==null || newOUName.IsNullOrEmpty())>
             <ChildContent>
                 <MudText>
-                    <ConfirmNewOU OU="@newOU" Confirmed="OUCreated" />
+                    <ConfirmNewOU OU="@newOU"  />
                 </MudText>
             </ChildContent>
             <TabContent>
@@ -118,10 +117,5 @@
 
         await InvokeAsync(StateHasChanged);
     }
-    async Task OUCreated(IADOrganizationalUnit ou)
-    {
-        await AuditLogger.OU.Created(ou);
-        _ = OUNotificationService.PostAsync(ou, NotificationType.Create);
 
-    }
 }
