--- a/BLAZAMGui/UI/Settings/Notifications/NotificationSettings.razor
+++ b/BLAZAMGui/UI/Settings/Notifications/NotificationSettings.razor
@@ -1,5 +1,5 @@
 ﻿@inherits AppComponentBase
-<h3>@AppLocalization["Managee Notifications"]</h3>
+<h3>@AppLocalization["Manage Notifications"]</h3>
 <MudAutocomplete @bind-Value=_selectedUser
                  MaxItems="50"
                  SearchFunc="SearchUsers"
@@ -7,24 +7,9 @@
                  Label="@AppLocalization["User"]" />
 @if (_selectedUser != null)
 {
-    <MudCard>
-        <MudStack Row=true>
-            <OUTreeView SelectedEntry=_selectedOU
-                        SelectedEntryChanged="ouChanged" />
-            <MudContainer>
-                @if (_selectedOU != null)
-                {
-                    <OUNotificationSubscriptions User="@_selectedUser"
-                                                 OU=@_selectedOU />
-
-
-                }
-            </MudContainer>
-        </MudStack>
-    </MudCard>
+ <NotificaionSubscriptionEditor User=_selectedUser/>
 }
 @code {
-    IDirectoryEntryAdapter? _selectedOU = null;
     IList<AppUser> Users = new List<AppUser>();
     AppUser? _selectedUser = null;
     protected override async Task OnInitializedAsync()
@@ -37,15 +22,7 @@
         if (value == null) value = String.Empty;
         return Users.Where(x => x.Username.Contains(value));
     }
-    private async void ouChanged(IDirectoryEntryAdapter entry)
-    {
-        var ou = (IADOrganizationalUnit)entry;
-        if (ou != null)
-        {
-            _selectedOU = ou;
-            await InvokeAsync(StateHasChanged);
-        }
-    }
+    
 
 
 
