Global import for notifications gui

--- a/BLAZAMGui/_Imports.razor
+++ b/BLAZAMGui/_Imports.razor
@@ -33,6 +33,8 @@
 
 @using BLAZAM.Logger
 @using BLAZAM.Notifications.Services
+@using BLAZAM.Gui.UI.Settings.Notifications
+
 @using BLAZAM.Services
 @using BLAZAM.Services.Background
 @using BLAZAM.Session.Interfaces
