--- a/BLAZAMGui/UI/Settings/Notifications/OUNotificationSubscriptions.razor
+++ b/BLAZAMGui/UI/Settings/Notifications/OUNotificationSubscriptions.razor
@@ -261,6 +261,8 @@
         if (changes > 0)
         {
             newSubscription = new();
+            newSubscription.UserId = User.Id;
+            newSubscription.OU = ou.DN;
             SnackBarService.Success(AppLocalization["Saved notification subscription"]);
             UpdateSubscriptions();
 
