Fully functional email notifications

--- a/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
@@ -1,8 +1,46 @@
 ﻿@inherits Widget
 @attribute [Authorize]
-<div Background="Background.Secondary" >
 
-    <h3>User passwords changed in the last 90 days</h3>
+<MudDataGrid T="IDirectoryEntryAdapter"
+             Items="LockedUsers"
+             RowClick="@RowClicked"
+             RowClass="cursor-pointer"
+             Dense=true
+             Filterable=true
+             RowsPerPage="5"
+             FilterMode="DataGridFilterMode.Simple"
+             Loading=@LoadingData
+             Square=true
+             ColumnResizeMode="ResizeMode.Column"
+             Virtualize=true
+             Class="py-0"
+             SortMode="SortMode.Single">
+    <Columns>
+        <TemplateColumn Title="Name">
+            <CellTemplate>
+                <MudTooltip Text="@context.Item?.OU.ToPrettyOu()">
+                    <MudText>@context.Item?.CanonicalName</MudText>
+                </MudTooltip>
+            </CellTemplate>
+        </TemplateColumn>
+        <TemplateColumn Title="Password Changed">
+            <CellTemplate>
+                    <MudText>@(((IADUser)context.Item).PasswordLastSet)</MudText>
+            </CellTemplate>
+        </TemplateColumn>
+
+    </Columns>
+    <PagerContent>
+        <MudDataGridPager T="IDirectoryEntryAdapter" />
+    </PagerContent>
+</MudDataGrid>
+
+
+<MudOverlay Visible=LoadingData>
+    <MudProgressLinear Indeterminate=true />
+</MudOverlay>
+@* <div Background="Background.Secondary" >
+
 
     <div Overflow="Overflow.Auto" Style="max-height:350px;">
         @foreach (var user in LockedUsers)
@@ -21,7 +59,7 @@
 
         }
     </div>
-</div>
+</div> *@
 @code {
     List<IADUser> LockedUsers = new();
 
