--- a/BLAZAMGui/UI/Settings/Notifications/OUNotificationSubscriptions.razor
+++ b/BLAZAMGui/UI/Settings/Notifications/OUNotificationSubscriptions.razor
@@ -262,7 +262,7 @@
         {
             newSubscription = new();
             newSubscription.UserId = User.Id;
-            newSubscription.OU = ou.DN;
+            newSubscription.OU = OU.DN;
             SnackBarService.Success(AppLocalization["Saved notification subscription"]);
             UpdateSubscriptions();
 
