--- a/BLAZAMGui/UI/Dashboard/CurrentUserDashboardWidgets.razor
+++ b/BLAZAMGui/UI/Dashboard/CurrentUserDashboardWidgets.razor
@@ -40,18 +40,33 @@
             </ChildContent>
             <ItemRenderer>
                 @{
-                    var widget = allWidgets.First(w => w.WidgetType == context.WidgetType);
+
+
+                    Widget? widget =null;
+                    try
+                    {
+                        widget = allWidgets.First(w => w.WidgetType == context.WidgetType);
+
+                    }
+                    catch
+                    {
+
+                    }
+                    if (widget != null)
+                    {
+                        <MudCard Class="my-5 " Elevation="1">
+                            <MudCardHeader>
+                                <MudText Typo="Typo.h6"> @widget.Title</MudText>
+                                <MudSpacer />
+                                <AppCloseButton OnClick=@(async()=>{await RemoveWidget(context);}) />
+
+                            </MudCardHeader>
+
+                            <DynamicComponent Type="@widget.GetType()" />
+                        </MudCard>
+                    }
                 }
-                <MudCard Class="my-5 " Elevation="1">
-                    <MudCardHeader>
-                        <MudText Typo="Typo.h6"> @widget.Title</MudText>
-                        <MudSpacer />
-                        <AppCloseButton OnClick=@(async()=>{await RemoveWidget(context);}) />
-
-                    </MudCardHeader>
-
-                    <DynamicComponent Type="@widget.GetType()" />
-                </MudCard>
+               
             </ItemRenderer>
         </MudDropContainer>
     }
