--- a/BLAZAMGui/UI/Dashboard/Widgets/ChangedEntriesWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/ChangedEntriesWidget.razor
@@ -57,7 +57,7 @@
 
         {
             var search = new ADSearch();
-            search.Fields.Changed = DateTime.Now.AddDays(-1);
+            search.Fields.PasswordLastSet = DateTime.Now.AddDays(-1).ToFileTimeUtc().ToString();
             changdEntries = (await search.SearchAsync<DirectoryEntryAdapter, IDirectoryEntryAdapter>()).Where(x => x.CanRead).ToList();
             LoadingData = false;
             await InvokeAsync(StateHasChanged);
